--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --font-merriweather: "Merriweather", serif;
+  --font-birthstone: "Birthstone", cursive;
   --font-parisienne: "Parisienne", cursive;
+  --font-montserrat: "Montserrat", sans-serif;
   --color-darkGray: #666666
 }
