--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
   --font-birthstone: "Birthstone", cursive;
   --font-parisienne: "Parisienne", cursive;
   --font-montserrat: "Montserrat", sans-serif;
+  --font-tangerine: "Tangerine", cursive;
   --color-darkGray: #666666
 }
