--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,7 @@
   --font-parisienne: "Parisienne", cursive;
   --font-montserrat: "Montserrat", sans-serif;
   --font-tangerine: "Tangerine", cursive;
+  --font-dancingScript: "Dancing Script", cursive;
+  --font-cormorantGaramond: "Cormorant Garamond", serif;
   --color-darkGray: #666666
 }
